[package]
name = "solana-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.13"
futures-util = "0.3.31"
serde = "1.0.210"
serde_json = "1.0.132"
solana-client = "2.0.13"
solana-sdk = "2.0.13"
solana-transaction-status = "2.0.13"
tokio = "1.40.0"
