[package]
name = "solana-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.13"
dotenv = "0.15.0"
futures-util = "0.3.31"
regex = "1.11.1"
serde = "1.0.210"
serde_json = "1.0.132"
solana-client = "2.0.13"
solana-sdk = "2.0.13"
solana-transaction-status = "2.0.13"
thiserror = "2.0.0"
tokio = "1.40.0"
tokio-util = { version = "0.7.12", features = ["rt"] }
# anchor-client = { version = "0.30.1 ", features = ["async"] }
